Replace custom version parsing with PEP 440 compliant packaging.version
- Import packaging.version for proper version comparison
- Update compare_versions to use version.parse() for both inputs
- Deprecate parse_version (kept for backward compatibility)
- Add comprehensive docstring with examples for pre-release versions
- Add packaging>=23.0 to requirements-test.txt
- Handles complex versions: pre-releases, post-releases, dev, local identifiers
- Fixes TC-015 version validation to support mypy 0.900+ format

--- a/x-poc4-coderabbit/0.3-Testing/requirements-test.txt
+++ b/x-poc4-coderabbit/0.3-Testing/requirements-test.txt
@@ -8,5 +8,8 @@ pytest-cov>=4.1.0         # Coverage reporting
 pytest-mock>=3.11.1       # Mocking support
 pytest-timeout>=2.2.0     # Test timeout handling
 
+# Version handling (PEP 440 compliant)
+packaging>=23.0           # Version parsing for linter version comparisons
+
 # Additional utilities
 coverage>=7.3.0           # Coverage analysis
