Fix security, compatibility, and code quality issues across POC3/POC4
Critical Security Fixes:
- ENV-FILE-SECURITY-GUIDE.md: Correct entropy calculation (280→298 bits)
- EXIT-CODE-STANDARD.md: Fix DB_PASSWORD env var key (was DB_POSTGRESDB_PASSWORD)
- coderabbit-cli.md: Replace unsafe pipe-to-shell with secure install methods
- test_parser.py: Remove 90-line embedded review narrative (code bloat)

Robustness Improvements:
- CODERABBIT-FIX-phase3-env-file-security.md: Fix unsafe grep -c pattern (2 locations)
  Replace 'grep -c ... || echo 0' with 'grep | wc -l' to avoid concatenation
- CODERABBIT-FIX-quality-fragile-grep-pattern.md: Enhanced 3-stage detection
  Stage 1: Fail on numeric issue counts
  Stage 2: Pass on explicit negation OR absence of issue keywords
  Stage 3: Flag ambiguous outputs for manual verification

Documentation Quality:
- Removed review narratives from production code (separation of concerns)
- Added security warnings and best practices for installation
- Fixed grep patterns to handle various success/failure outputs

Files Modified: 80+ files across POC3 and POC4
Impact: Improved security, automation reliability, and code maintainability

--- a/x-poc4-coderabbit/0.3-Testing/pytest.ini
+++ b/x-poc4-coderabbit/0.3-Testing/pytest.ini
@@ -47,7 +47,12 @@ precision = 2
 show_missing = True
 skip_covered = False
 
-# Fail if coverage below threshold
+# Coverage threshold: 85% is the target for production-quality code
+# Rationale: Balances thorough testing with practical development velocity
+# - Critical paths (parser, security, SOLID validation) require >90% coverage
+# - Utility/helper functions may have lower coverage if edge cases are documented
+# - Threshold will be incrementally raised to 90% as codebase matures
+# Note: CI will fail if coverage drops below this threshold
 fail_under = 85
 
 exclude_lines =
